apps/base/linkding/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: linkding
spec:
  redirectScheme:
    scheme: https
    permanent: true
